# nockd

./: .gitignore  Cargo.toml  DESIGN.md  NOCKUP-TODO.md  README.md  build.rs
design/: API-INTEGRATION.md  DESIGN-SYSTEM.md  README.md  SCREENS.md
design/references/: Bauhaus Permutations.dc.html  Nockd Bauhaus Screens.dc.html  Nockd Dashboard Patterns.dc.html
examples/: GOTCHAS.md  README.md
examples/_skeleton/: README.md  cargo-tls-pin.toml  nockd.toml  rust-toolchain.toml
examples/balance-api/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/balance-api/src/: main.rs
examples/chain-watch/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/chain-watch/src/: main.rs
examples/common-blog/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/common-blog/hoon/app/: app.hoon
examples/common-blog/src/: main.rs
examples/conway/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/conway/hoon/app/: app.hoon
examples/conway/src/: main.rs
examples/echo-grpc/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/echo-grpc/hoon/app/: listen.hoon  talk.hoon
examples/echo-grpc/hoon/lib/: lib.hoon
examples/echo-grpc/src/: listen.rs  talk.rs
examples/hello-basic/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/hello-basic/src/: main.rs
examples/http-counter/: .gitignore  Cargo.toml  README.md  RECIPE.md  build.rs  nockapp.toml  nockd.toml
examples/http-counter/hoon/app/: app.hoon
examples/http-counter/src/: main.rs
examples/http-static/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/http-static/hoon/app/: app.hoon
examples/http-static/src/: main.rs
examples/minesweeper/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml  rust-toolchain.toml
examples/minesweeper/hoon/app/: app.hoon
examples/minesweeper/src/: main.rs
examples/nock-price/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/nock-price/src/: main.rs
examples/token-price/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/token-price/src/: main.rs
examples/wordle/: .gitignore  Cargo.toml  README.md  RECIPE.md  nockapp.toml  nockd.toml
examples/wordle/hoon/app/: app.hoon
examples/wordle/src/: main.rs
src/: api.rs  apiv1.rs  attest.rs  buildkit.rs  cli.rs  client.rs  config.rs  daemon.rs  dashboard.rs  health.rs  main.rs  nockchain.rs  registry.rs  resources.rs  store.rs  supervisor.rs  tui.rs
web/: app.js  index.html  style.css
