[package]
name = "chain-watch"
version = "0.1.0"
edition = "2021"
authors = ["sigilante"]
description = "Polls the Nockchain public gRPC endpoint for the heaviest block height and logs one greppable metric line per poll."

[[bin]]
name = "chain-watch"
path = "src/main.rs"

[dependencies]
# NockVM / NockApp runtime. Pinned to a nockchain rev that has the v2 public_nockchain
# gRPC client (the `grpc` template's older pin 485e914 predates it). All four crates share
# one rev so the runtime and the gRPC client come from one consistent source tree.
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }

# The Nockchain public gRPC client (v2). PublicNockchainGrpcClient::explorer_heaviest_height()
# returns the chain tip.
nockapp-grpc = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.41"
# The nockchain dep graph enables BOTH rustls crypto providers (ring + aws-lc-rs), so
# rustls cannot auto-select one and panics on first TLS use. We pick `ring` explicitly and
# install it as the process default at startup (see main.rs).
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
# Build script dependencies if needed
