[package]
name = "common-blog"
version = "0.1.0"
edition = "2021"
authors = ["sigilante"]
description = "A minimal self-hosted blog NockApp: publish posts and read them over HTTP, with all logic + storage in the Hoon kernel. A NockApp reimplementation of the Urbit Common Blog idea."

[[bin]]
name = "common-blog"
path = "src/main.rs"

[dependencies]
# NockVM / NockApp runtime. Pinned to the rev that adds the HTTP_PORT override to the local
# HTTP driver (PR #134, one commit past 6d29078 -- the only diff is crates/nockapp/src/
# drivers/http/http.rs). This lets the stock http_driver() bind 127.0.0.1:<HTTP_PORT>
# directly, so common-blog binds 8085 and coexists with the other example apps -- no proxy,
# no shared :8080. All three runtime crates share one rev so they come from a single
# consistent source tree.
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "07577127958db94be12e95ea816f31bc7582aa2c" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "07577127958db94be12e95ea816f31bc7582aa2c" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "07577127958db94be12e95ea816f31bc7582aa2c" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.41"
# (No axum here: we use the library's nockapp::http_driver(), which binds 127.0.0.1:8085
#  directly via the HTTP_PORT env var (set in src/main.rs). No proxy needed.)

[build-dependencies]
# Build script dependencies if needed
