[package]
name = "hello-basic"
version = "0.1.0"
edition = "2021"
authors = ["sigilante"]
description = "The minimal supervised NockApp: boots the basic kernel and emits a heartbeat tick metric on a loop."

[[bin]]
name = "hello-basic"
path = "src/main.rs"

[dependencies]
# NockVM / NockApp runtime. Pinned to the same nockchain rev chain-watch uses (the `basic`
# template's own pin can be stale). All three crates share one rev so the runtime comes from
# one consistent source tree. Bumping to this rev brings API drift you must follow in main.rs:
# `boot::setup` takes `cli` (not `Some(cli)`) and `NockApp<J>` is generic.
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }

# Common dependencies for NockApps. No chain, no HTTP, no TLS here — so no nockapp-grpc and
# no rustls crypto-provider pin (chain-watch needs both; this minimal app needs neither).
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.41"

[build-dependencies]
# Build script dependencies if needed
