[package]
name = "http-counter"
version = "0.1.0"
edition = "2021"
authors = ["sigilante"]
description = "An HTTP server that serves and increments a counter whose value PERSISTS across restarts via nockd kernel-state checkpointing."

[[bin]]
name = "http-counter"
path = "src/main.rs"

[dependencies]
# NockVM / NockApp runtime. Pinned to the same nockchain rev proven by chain-watch
# (the http-server template's pin 336f744 predates the toolchain/API used here). All three
# runtime crates share one rev so they come from a single consistent source tree.
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.41"
# (No axum here: we use the library's nockapp::http_driver() on 8080 and a small in-process
#  tokio TCP proxy to expose the required port 8081 -- see src/main.rs.)

[build-dependencies]
# Build script dependencies if needed
