[package]
name = "nock-price"
version = "0.1.0"
edition = "2021"
authors = ["sigilante"]
description = "Polls the live $NOCK token price from multiple venues (DexScreener/Base, Kraken, SafeTrade via CoinGecko) and logs a median aggregate USD price as a greppable metric line per tick."

[[bin]]
name = "nock-price"
path = "src/main.rs"

[dependencies]
# NockVM / NockApp runtime. Pinned to the same nockchain rev chain-watch uses (known-good
# with the pinned nightly toolchain). This app does NOT use the gRPC chain client — it only
# needs the kernel runtime so it boots as a real supervised NockApp.
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "6d29078e69b64febabe3d8d20a64c06b969a16ed" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.41"

# HTTP client for the price APIs. rustls-tls (not native-tls) so we control the crypto
# provider explicitly (see below). No default features to avoid pulling in a second TLS stack.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# The nockchain dep graph enables BOTH rustls crypto providers (ring + aws-lc-rs), so
# rustls cannot auto-select one and panics on first TLS use. We pick `ring` explicitly and
# install it as the process default at startup (see main.rs). Every price API is https.
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
# Build script dependencies if needed
