[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
authors = ["sigilante"]
description = "A playable Wordle game served over HTTP, with all game logic in the Hoon kernel."

[[bin]]
name = "wordle"
path = "src/main.rs"

[dependencies]
# NockVM / NockApp runtime. Pinned to a rev that includes PR #134's HTTP_PORT local-mode
# port override (07577127 == current origin/master), so the stock http_driver() binds the
# port we want with NO TCP proxy. All three runtime crates share one rev for consistency.
nockapp = { git = "https://github.com/nockchain/nockchain.git", rev = "07577127958db94be12e95ea816f31bc7582aa2c" }
nockvm = { git = "https://github.com/nockchain/nockchain.git", rev = "07577127958db94be12e95ea816f31bc7582aa2c" }
nockvm_macros = { git = "https://github.com/nockchain/nockchain.git", rev = "07577127958db94be12e95ea816f31bc7582aa2c" }

# Common dependencies for NockApps
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
bytes = "1.5.0"
tokio = { version = "1.32", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "rt",
  "signal",
  "time",
] }
tokio-util = "0.7.11"
tracing = "0.1.41"

[build-dependencies]
# Build script dependencies if needed
